[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph"
dynamic = ["version"]
description = "Building stateful, multi-actor applications with LLMs"
authors = []
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
license-files = ['LICENSE']
dependencies = [
    "langchain-core>=0.1",
    "langgraph-checkpoint>=2.1.0,<3.0.0",
    "langgraph-sdk>=0.2.2,<0.3.0",
    "langgraph-prebuilt>=0.6.0,<0.7.0",
    "xxhash>=3.5.0",
    "pydantic>=2.7.4",
]

[project.urls]
Repository = "https://www.github.com/langchain-ai/langgraph"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
    "pytest-mock",
    "syrupy",
    "httpx",
    "pytest-watcher",
    "mypy",
    "ruff",