[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-examples"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph-cli",
    "langgraph-sdk",
]

[tool.uv.sources]
langgraph-cli = { workspace = true }
langgraph-sdk = { workspace = true }

[tool.hatch.build]
packages = []
